[package]
name = "fude"
version = "0.1.0"
edition = "2024"
rust-version = "1.89.0"
description = "Fude (筆) — rich text rendering: markdown, syntax highlighting, styled spans"
homepage = "https://github.com/pleme-io/fude"
repository = "https://github.com/pleme-io/fude"
readme = "README.md"
license = "MIT"
categories = ["text-processing", "rendering"]
keywords = ["markdown", "richtext", "syntax", "highlighting", "gpu"]

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[dependencies]
pulldown-cmark = "0.12"
serde = { version = "1", features = ["derive"] }
tracing = "0.1"
thiserror = "2"
unicode-width = "0.2"
